combined TrainingEmbeddingIndexer with SemanticIndexService